# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: pyci.yml
gendiff/: __init__.py  build_diff.py  find_diff.py  generate_diff.py  parser.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  generate_diff.py  parser.py
tests/: test_build_diff.py  test_gendiff.py  test_json.py  test_parser.py  test_plain.py  test_stylish.py
tests/test_data/: data1.json  data2.json  result.txt  result_json.txt
