[project]
authors = [
    {name = "Anna Myshkina", email = "annet.myskina@gmail.com"},
]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=4.0.0",
    "ruff>=0.12.12",
]

[tool.pytest.ini_options]
addopts = "--cov=gendiff --cov-report=xml"


[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"
